# obs-audio-to-websocket

./: .gersemirc  .gitignore  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  build-local.bat  build-local.sh  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/check-changes/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: .Aptfile  .Brewfile  Build-Windows.ps1  Fetch-WindowsDeps.ps1  Install-MacOSDeps.sh  Install-WindowsDeps-Minimal.ps1  Package-Windows.ps1  build-macos
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build.yml  dispatch.yaml  pr-pull.yaml  push.yaml
cmake/: Findlibobs.cmake  Findobs-frontend-api.cmake
cmake/common/: buildspec_common.cmake
cmake/macos/: buildspec.cmake  entitlements.plist
cmake/windows/: helpers.cmake
cmake/windows/resources/: installer.iss.in
data/locale/: en-US.ini
include/obs-audio-to-websocket/: audio-format.hpp  audio-streamer.hpp  constants.hpp  obs-source-wrapper.hpp  settings-dialog.hpp  websocket-client.hpp  websocketpp-client.hpp
scripts/: patch-websocketpp.sh
src/: audio-format.cpp  audio-streamer.cpp  plugin-main.cpp  settings-dialog.cpp  websocket-client.cpp  websocketpp-client.cpp
ui/: settings-dialog.ui
